# anafi-mission-planning

./: README.md  generate_largest_goal.py
DiNo/: Dockerfile
Graphplan/: GraphPlan_main.py
PDDL/single_drone/domain/: domain.pddl  durative_motion_single_drone.pddl  move.pddl  numeric_fuel.pddl  numeric_fuel_jf.pddl
PDDL/single_drone/problems/: durative_motion_single_drone.pddl  numeric_fuel_jf.pddl
PDDL/test/: fix_typing_domain.pddl
SAR/single_drone/domain/: numeric_fuel.pddl  numeric_fuel_jf.pddl
SAR/single_drone/problems/: move.pddl  numeric_fuel.pddl  numeric_fuel_jf.pddl
SAR/test/: fix_typing_problem.pddl
SAR/test/domain/: sar_single_drone.pddl
SAR/test/problems/: sar_single_drone.pddl  test.pddl
action_implementations/: CMakeLists.txt  package.xml
action_implementations/src/: move_action_server.cpp  track_action_server.cpp
anafi_uav_interfaces/: CMakeLists.txt  package.xml
anafi_uav_interfaces/action/: MoveToNED.action
anafi_uav_interfaces/msg/: DetectedPerson.msg  StampedString.msg
anafi_uav_interfaces/srv/: GetSearchPositions.srv  SetEquipmentNumbers.srv  SetFinishedAction.srv  SetLocationStatus.srv
automated_planning/: CMakeLists.txt  README  package.xml
automated_planning/bash_scripts/: run_mission_controller.sh
automated_planning/bash_scripts/plan_scripts/: scenario_1.sh  scenario_1_case_i.sh  scenario_1_two_drones.sh  scenario_2a_detection.sh  scenario_2b_all_locations.sh  scenario_2b_before_detection.sh  scenario_2b_detection.sh  scenario_2b_detection_only_markers.sh  scenario_2b_detection_two_drones.sh  scenario_4_same_area_unavailable.sh
automated_planning/bash_scripts/test_scripts/: critical_battery.sh  flying_state.bash  full_battery.sh  high_severity_person_detected.sh  landed_state.sh  low_battery.sh  low_severity_person_detected.sh  person_detected.sh
automated_planning/config/: config.yaml  mission_parameters.yaml
automated_planning/include/automated_planning/: drop_action.hpp  drop_equipment_action.hpp  drop_lifevest_action_node.hpp  drop_marker_action_node.hpp  land_action_node.hpp  mission_controller.hpp  move_action_node.hpp  search_action_node.hpp  takeoff_action_node.hpp  track_action_node.hpp
automated_planning/launch/: launch.py  launch_actions.py  launch_controller.py  search_launch.py
automated_planning/pddl/: move.pddl  sar.pddl  sar_testing.pddl  test_clipping.pddl
automated_planning/pddl/problems/: scenario_1.pddl  scenario_1_case_i.pddl  scenario_1_two_drones.pddl  scenario_2a_detection.pddl  scenario_2b_before_detection.pddl  scenario_2b_detection.pddl  scenario_2b_detection_only_markers.pddl  scenario_2b_detection_two_drones.pddl  scenario_2b_replan_actions.pddl  scenario_4_same_area_unavailable.pddl
automated_planning/src/: communicate_action_node.cpp  drop_action.cpp  drop_equipment_action.cpp  drop_lifevest_action_node.cpp  drop_marker_action_node.cpp  land_action_node.cpp  mission_controller.cpp  move_action_node.cpp  recharge_action_node.cpp  resupply_action_node.cpp  search_action_node.cpp  takeoff_action_node.cpp  track_action_node.cpp
automated_planning_ros2/: CMakeLists.txt  package.xml
automated_planning_ros2/config/: config.yaml  locations.yaml
automated_planning_ros2/include/automated_planning_ros2/: land_action_node.hpp  mission_controller.hpp  move_action_node.hpp  takeoff_action_node.hpp
automated_planning_ros2/launch/: launch.py  move_launch.py
automated_planning_ros2/pddl/: move.pddl  sar.pddl
automated_planning_ros2/src/: land_action_node.cpp  mission_controller.cpp  move_action_node.cpp  search_action_node.cpp  takeoff_action_node.cpp  test_node.cpp
waypoints_generator/: package.xml  setup.cfg  setup.py
waypoints_generator/waypoints_generator/: client.py  search_pattern.py  search_waypoints_node.py
